--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav>
         <div id="brand-title-div">
-            <img src="../Figma - Design 2/images/Logo.png" alt="logo">
+            <img src="/images/Logo.png" alt="logo">
         </div>
         <div id="nav-links">
             <ul>
@@ -53,7 +53,7 @@
         </div>
 
         <div id="background-img">
-            <img src="../Figma - Design 2/images/Illustration.png" alt="background-img">
+            <img src="/images/Illustration.png" alt="background-img">
         </div>
     </div>
 
@@ -63,13 +63,13 @@
     </div>
 
     <div id="sponsors">
-        <img src="../Figma - Design 2/images/logo3.svg" alt="sponsor1">
-        <img src="../Figma - Design 2/images/logo2.svg" alt="sponsor2">
-        <img src="../Figma - Design 2/images/logo6.svg" alt="sponsor3">
-        <img src="../Figma - Design 2/images/logo3.svg" alt="sponsor4">
-        <img src="../Figma - Design 2/images/logo5.svg" alt="sponsor5">
-        <img src="../Figma - Design 2/images/logo4.svg" alt="sponsor6">
-        <img src="../Figma - Design 2/images/logo6.svg" alt="sponsor7">
+        <img src="/images/logo3.svg" alt="sponsor1">
+        <img src="/images/logo2.svg" alt="sponsor2">
+        <img src="/images/logo6.svg" alt="sponsor3">
+        <img src="/images/logo3.svg" alt="sponsor4">
+        <img src="/images/logo5.svg" alt="sponsor5">
+        <img src="/images/logo4.svg" alt="sponsor6">
+        <img src="/images/logo6.svg" alt="sponsor7">
     </div>
 
     <div id="community">
@@ -112,7 +112,7 @@
 
     <div id="description">
         <div id="description-img">
-            <img src="../Figma - Design 2/images/rafiki.png" alt="desc-user">
+            <img src="/images/rafiki.png" alt="desc-user">
         </div>
 
         <div id="description-text">
@@ -168,7 +168,7 @@
 
     <div class="design-your-site">
         <div class="design-img">
-            <img src="../Figma - Design 2/images/pana.png" alt="pana">
+            <img src="/images/pana.png" alt="pana">
         </div>
 
         <div class="design-text">
@@ -190,7 +190,7 @@
 
     <div class="design-your-site" id="grey-background">
         <div class="design-img" id="grey-background-img">
-            <img src="../Figma - Design 2/images/tesla.jpg" alt="tesla">
+            <img src="/images/tesla.jpg" alt="tesla">
         </div>
 
         <div class="design-text" id="grey-background-text">
